--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "next": "14.2.2",
+    "next-auth": "^5.0.0-beta.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "set-cookie-parser": "^2.6.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/set-cookie-parser": "^2.4.7",
     "@typescript-eslint/parser": "^7.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
