--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: jwilder/nginx-proxy:1.5.1
     privileged: true
     ports:
-      - "80:80"
-      - "443:443"
+      - 80:80
+      - 443:443
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - $PWD/docker/proxy/web.test.local:/etc/nginx/vhost.d/web.test.local
@@ -54,8 +54,7 @@ services:
     command: >
       sh -c "
       ./init.sh &&
-      php-fpm &&
-      tail -f /dev/null
+      php-fpm
       "
 
   web:
@@ -82,6 +81,7 @@ services:
       VIRTUAL_HOST: next.test.local
       CERT_NAME: default
       AUTH_SECRET: some-secret
+      AUTH_URL: https://web.test.local/login-next
     working_dir: /app/nextjs
     tty: true
     depends_on:
@@ -89,8 +89,7 @@ services:
     command:  >
       sh -c "
       npm i &&
-      npm run dev -- -p 80 &&
-      tail -f /dev/null
+      npm run dev -- -p 80
       "
 
   db:
