Revert "use default signin"
This reverts commit 1c89dea05bfd6d2bc3cf7125cf542d5108c51356.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,7 +81,7 @@ services:
       VIRTUAL_HOST: next.test.local
       CERT_NAME: default
       AUTH_SECRET: some-secret
-      AUTH_URL: https://web.test.local/api/auth
+      AUTH_URL: https://web.test.local/login-next
     working_dir: /app/nextjs
     tty: true
     depends_on:
