--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -10,8 +10,8 @@
     "format": "prettier --write \"**/*.{cjs,ts,tsx,md,json}\""
   },
   "dependencies": {
-    "next": "14.2.2",
-    "next-auth": "^5.0.0-beta.11",
+    "next": "^14.2.3",
+    "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-dom": "^18",
     "set-cookie-parser": "^2.6.0",
