--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write \"**/*.{cjs,ts,tsx,md,json}\""
   },
   "dependencies": {
+    "ip-range-check": "^0.2.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
